--- a/app/assets/stylesheets/_fontfaces.css.scss
+++ b/app/assets/stylesheets/_fontfaces.css.scss
@@ -63,6 +63,20 @@
 
 }
 
+@font-face {
+    font-family: 'droid_serifitalic';
+    src: url('droidserif-italic-webfont-webfont.eot');
+    src: url('droidserif-italic-webfont-webfont.eot?#iefix') format('embedded-opentype'),
+         url('droidserif-italic-webfont-webfont.woff') format('woff'),
+         url('droidserif-italic-webfont-webfont.ttf') format('truetype'),
+         url('droidserif-italic-webfont-webfont.svg#droid_serifitalic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
 // @font-face {
 //     font-family: 'SourceSansProLight';
 //     src: url('SourceSansPro-Light-webfont.eot');
