--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -4,6 +4,7 @@
  <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
 <title>Checklist</title>
 <%= stylesheet_link_tag    "application", :media => "all" %>
+<link rel="stylesheet" href="http://basehold.it/38">
 <%= javascript_include_tag "application" %>
 <%= csrf_meta_tags %>
 </head>
