--- a/app/assets/stylesheets/_checklist.css.scss
+++ b/app/assets/stylesheets/_checklist.css.scss
@@ -165,6 +165,8 @@ h5, .blogger-name {
 }
 
 .blogger-name {
+  @include media(max-width 1000px) {
+  }
   @include media(max-width 500px) {
     padding-top: 10px;
   }
@@ -303,7 +305,7 @@ h5, .blogger-name {
   @include media(max-width 1000px) {
     @include span-columns(7);
     text-align: left;
-    margin-top: 67px;
+    margin-top: 42px;
     margin-left: -10px;
   }
 }
@@ -316,6 +318,7 @@ h5, .blogger-name {
   @include span-columns(3);
   @include shift(.55);
   display: none;
+  margin-bottom: -24px;
   @include media(max-width 1000px) {
     display: inline;
     img {
@@ -388,7 +391,7 @@ h5, .blogger-name {
   @include media(max-width 1350px) {
   }
   @include media(max-width 1000px) {
-    margin-top: 45px;
+    margin-top: 71px;
   }
   @include media(max-width 500px) {
     line-height: 1em;
@@ -405,7 +408,6 @@ h5, .blogger-name {
 
 .blogger-name {
   padding-top: 13px;
-  margin-left: 5px;
   @include media(max-width 1275px) {
     padding-top: 7px;
   }
@@ -436,12 +438,12 @@ h5, .blogger-name {
   @include media(max-width 1275px) {
   }
   @include media(max-width 1000px) {
-    @include span-columns(5);
-    @include shift(2);
+    @include span-columns(7);
+    @include shift(-1.35);
   }
   @include media(max-width 855px) {
-    @include span-columns(6);
-    @include shift(1);
+    @include span-columns(8);
+    @include shift(-2.7);
   }
   @include media(max-width 720px) {
     @include span-columns(8);
@@ -483,7 +485,7 @@ h5, .blogger-name {
   @include media(max-width 1000px) {
     @include shift(2);
     @include span-columns(9);
-    margin-top: 20px;
+    margin-top: 32px;
   }
   @include media(max-width 720px) {
     font-size: em(20, 20);
@@ -503,7 +505,7 @@ h5, .blogger-name {
   @include media(max-width 1000px) {
     @include span-columns(4);
     @include shift(2);
-    margin-top: -45px;
+    margin-top: -24px;
     padding-left: 10px;
     text-align: left;
   }
@@ -526,7 +528,7 @@ h5, .blogger-name {
   }
   @include media(max-width 1000px) {
     @include shift(.95);
-    margin-top: 60px;
+    margin-top: 58px;
   }
   @include media(max-width 855px) {
     @include shift(-.17);
@@ -636,7 +638,7 @@ strong {
   padding-right: 20px;
   padding-bottom: 6px;
   @include media(max-width 1275px) {
-    margin-left: -57px;
+    margin-left: -53px;
   }
   @include media(max-width 500px) {
     display: none;
