breakpoints for 625px and 585px

--- a/app/assets/stylesheets/_checklist.css.scss
+++ b/app/assets/stylesheets/_checklist.css.scss
@@ -100,7 +100,6 @@ h1 {
     padding-left: 40px;
   }
   @include media(max-width 520px) {
-    @include header($weight: normal, $size: em(50, 20), $color: $grey_text);
     padding-left: 55px;
   }
 }
@@ -169,6 +168,9 @@ h5, .blogger-name {
   }
   @include media(max-width 500px) {
     padding-top: 10px;
+  }
+  @include media(max-width 625px) {
+    padding-left: 2px;
   }
 }
 
@@ -260,6 +262,10 @@ h5, .blogger-name {
   }
   @include media(max-width 855px) {
     @include shift(1);
+  }
+  @include media(max-width 625px) {
+    @include shift(0);
+    padding-left: 10px;
   }
 }
 
@@ -354,6 +360,10 @@ h5, .blogger-name {
   @include media(max-width 855px) {
     @include shift(1);
   }
+  @include media(max-width 625px) {
+    @include shift(0);
+    padding-left: 9px;
+  }
 }
 
 .logo-background {
@@ -403,8 +413,10 @@ h5, .blogger-name {
     margin-top: 45px;
     padding-bottom: 8px;
   }
+  @include media(max-width 520px) {
+    margin-top: 47px;
+  }
   @include media(max-width 500px) {
-    line-height: 1em;
   }
 }
 
@@ -416,6 +428,9 @@ h5, .blogger-name {
   }
  @include media(max-width 720px) {
  }
+ @include media(max-width 520px) {
+   padding-top: 9px;
+ }
 }
 
 .blogger-name {
@@ -425,6 +440,9 @@ h5, .blogger-name {
   }
   @include media(max-width 720px) {
     padding-top: 11px;
+  }
+  @include media(max-width 520px) {
+    padding-top: 13px;
   }
 }
 
@@ -446,6 +464,9 @@ h5, .blogger-name {
     @include shift(3);
     padding-left: 12px;
   }
+  @include media(max-width 625px) {
+    @include shift(2.32);
+  }
 }
 
 .homer-icon {
@@ -459,7 +480,9 @@ h5, .blogger-name {
   }
   @include media(max-width 720px) {
   }
-  @include media(max-width 500px) {
+  @include media(max-width 520px) {
+    width: 350px;
+    height: auto;
   }
 }
 
@@ -481,6 +504,9 @@ h5, .blogger-name {
   }
   @include media(max-width 720px) {
     margin-top: 208px;
+  }
+  @include media(max-width 625px) {
+    @include shift(-2.17);
   }
 }
 
@@ -523,6 +549,11 @@ h5, .blogger-name {
     margin-top: -69px;
     padding-left: 10px;
   }
+  @include media(max-width 625px) {
+    padding-left: 10px;
+  }
+  @include media(max-width 520px) {
+  }
   @include media(max-width 500px) {
     margin-top: -85px;
   }
@@ -542,13 +573,20 @@ h5, .blogger-name {
   }
   @include media(max-width 1000px) {
     @include shift(.95);
-    margin-top: 52px;
+    margin-top: 53px;
   }
   @include media(max-width 855px) {
     @include shift(-.17);
   }
   @include media(max-width 720px) {
     margin-top: 44px;
+  }
+  @include media(max-width 625px) {
+    @include shift(-.75);
+  }
+  @include media(max-width 520px) {
+    margin-top: 36px;
+    @include shift(.02);
   }
 }
 
@@ -558,6 +596,8 @@ h5, .blogger-name {
   line-height: 3.6em;
   @include media(max-width 1275px) {
     line-height: 3.1em;
+  }
+  @include media(max-width 1000px) {
   }
   @include media(max-width 720px) {
     line-height: 2.8em;
@@ -570,6 +610,15 @@ h5, .blogger-name {
   @include media(max-width 1350px) {
     @include shift(1.3);
   }
+  @include media(max-width 1000px) {
+    @include shift(1.35);
+  }
+  @include media(max-width 625px) {
+    display: none;
+  }
+  @include media(max-width 520px) {
+    @include shift(1.45);
+  }
 }
 
 .check-lines {
@@ -578,6 +627,8 @@ h5, .blogger-name {
   @include media(max-width 1000px) {
     @include span-columns(12);
     margin-left: -5px;
+  }
+  @include media(max-width 625px) {
   }
 }
 
@@ -614,6 +665,9 @@ h5, .blogger-name {
   }
   @include media(max-width 630px) {
     font-size: em(20, 20);
+  }
+  @include media(max-width 625px) {
+    @include shift(.95);    
   }
   @include media(max-width 500px) {
     padding-left: 16px;
@@ -654,8 +708,12 @@ strong {
   @include media(max-width 1275px) {
     margin-left: -53px;
   }
-  @include media(max-width 500px) {
-    display: none;
+  @include media(max-width 625px) {
+    @include shift(-.8);
+    padding-right: 10px;
+  }
+  @include media(max-width 400px) {
+    @include shift(-2.1);
   }
 }
 
