final touches and moves paragraph up one line

--- a/app/assets/stylesheets/_checklist.css.scss
+++ b/app/assets/stylesheets/_checklist.css.scss
@@ -147,6 +147,8 @@ h5, .blogger-name {
 }
 
 .blog-tags {
+  @include media(max-width 1275px) {
+  }
   @include media(max-width 720px) {
     @include header($weight: 200, $size: em(18, 20), $color: $red);
   }
@@ -164,7 +166,15 @@ h5, .blogger-name {
 }
 
 .blogger-name {
+  @include media(max-width 1275px) {
+    @include shift(.05);
+  }
   @include media(max-width 1000px) {
+    margin-top: 33px;
+    @include shift(.02);
+  }
+  @include media(max-width 720px) {
+    margin-top: 30px;
   }
   @include media(max-width 500px) {
     padding-top: 10px;
@@ -495,15 +505,15 @@ h5, .blogger-name {
   @include outer-container;
   z-index: 2;
   position: relative;
-  margin-top: 264px;
+  margin-top: 226px;
   @include media(max-width 1275px) {
-    margin-top: 230px;
+    margin-top: 197px;
   }
   @include media(max-width 855px) {
     @include shift(-1.17);
   }
   @include media(max-width 720px) {
-    margin-top: 208px;
+    margin-top: 178px;
   }
   @include media(max-width 625px) {
     @include shift(-2.17);
