--- a/app/assets/stylesheets/_checklist.css.scss
+++ b/app/assets/stylesheets/_checklist.css.scss
@@ -443,6 +443,9 @@ h5, .blogger-name {
  }
 }
 
+.title, .subtitle {
+}
+
 .blogger-name {
   padding-top: 13px;
   @include media(max-width 1275px) {
