adjusted padding 1st paragraph and cleaner grey background

--- a/app/assets/stylesheets/_grey_retro_smashbot.css.sass
+++ b/app/assets/stylesheets/_grey_retro_smashbot.css.sass
@@ -81,6 +81,7 @@ $grey-spacing:20px
 .grey-Robo-badge
   +omega
   margin-left: 200px
+  margin-right: 10px
 
 .grey-top-text
   +span-columns(5.25)
@@ -90,7 +91,7 @@ $grey-spacing:20px
 .grey-Tools-badge
   +omega
 
-.grey-Robo-badge, .grey-top-text
+.grey-top-text
   margin-right: 5px
 
 
