--- a/public/assets/_grey_retro_smashbot.css
+++ b/public/assets/_grey_retro_smashbot.css
@@ -5,28 +5,6 @@
   box-sizing: border-box;
 }
 
-/* line 11, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/neat-1.3.0/app/assets/stylesheets/grid/_visual-grid.scss */
-body:before {
-  content: '';
-  display: inline-block;
-  background-image: deprecated-webkit-gradient(linear, left top, left bottom, rgba(0, 0, 0, 0) 0, #eeeeee 0, #eeeeee 6.38298%, rgba(0, 0, 0, 0) 6.38298%, rgba(0, 0, 0, 0) 8.51064%, #eeeeee 8.51064%, #eeeeee 14.89362%, rgba(0, 0, 0, 0) 14.89362%, rgba(0, 0, 0, 0) 17.02128%, #eeeeee 17.02128%, #eeeeee 23.40426%, rgba(0, 0, 0, 0) 23.40426%, rgba(0, 0, 0, 0) 25.53191%, #eeeeee 25.53191%, #eeeeee 31.91489%, rgba(0, 0, 0, 0) 31.91489%, rgba(0, 0, 0, 0) 34.04255%, #eeeeee 34.04255%, #eeeeee 40.42553%, rgba(0, 0, 0, 0) 40.42553%, rgba(0, 0, 0, 0) 42.55319%, #eeeeee 42.55319%, #eeeeee 48.93617%, rgba(0, 0, 0, 0) 48.93617%, rgba(0, 0, 0, 0) 51.06383%, #eeeeee 51.06383%, #eeeeee 57.44681%, rgba(0, 0, 0, 0) 57.44681%, rgba(0, 0, 0, 0) 59.57447%, #eeeeee 59.57447%, #eeeeee 65.95745%, rgba(0, 0, 0, 0) 65.95745%, rgba(0, 0, 0, 0) 68.08511%, #eeeeee 68.08511%, #eeeeee 74.46809%, rgba(0, 0, 0, 0) 74.46809%, rgba(0, 0, 0, 0) 76.59574%, #eeeeee 76.59574%, #eeeeee 82.97872%, rgba(0, 0, 0, 0) 82.97872%, rgba(0, 0, 0, 0) 85.10638%, #eeeeee 85.10638%, #eeeeee 91.48936%, rgba(0, 0, 0, 0) 91.48936%, rgba(0, 0, 0, 0) 93.61702%, #eeeeee 93.61702%, #eeeeee 100.0%, rgba(0, 0, 0, 0) 100.0%);
-  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0, #eeeeee 0, #eeeeee 6.38298%, rgba(0, 0, 0, 0) 6.38298%, rgba(0, 0, 0, 0) 8.51064%, #eeeeee 8.51064%, #eeeeee 14.89362%, rgba(0, 0, 0, 0) 14.89362%, rgba(0, 0, 0, 0) 17.02128%, #eeeeee 17.02128%, #eeeeee 23.40426%, rgba(0, 0, 0, 0) 23.40426%, rgba(0, 0, 0, 0) 25.53191%, #eeeeee 25.53191%, #eeeeee 31.91489%, rgba(0, 0, 0, 0) 31.91489%, rgba(0, 0, 0, 0) 34.04255%, #eeeeee 34.04255%, #eeeeee 40.42553%, rgba(0, 0, 0, 0) 40.42553%, rgba(0, 0, 0, 0) 42.55319%, #eeeeee 42.55319%, #eeeeee 48.93617%, rgba(0, 0, 0, 0) 48.93617%, rgba(0, 0, 0, 0) 51.06383%, #eeeeee 51.06383%, #eeeeee 57.44681%, rgba(0, 0, 0, 0) 57.44681%, rgba(0, 0, 0, 0) 59.57447%, #eeeeee 59.57447%, #eeeeee 65.95745%, rgba(0, 0, 0, 0) 65.95745%, rgba(0, 0, 0, 0) 68.08511%, #eeeeee 68.08511%, #eeeeee 74.46809%, rgba(0, 0, 0, 0) 74.46809%, rgba(0, 0, 0, 0) 76.59574%, #eeeeee 76.59574%, #eeeeee 82.97872%, rgba(0, 0, 0, 0) 82.97872%, rgba(0, 0, 0, 0) 85.10638%, #eeeeee 85.10638%, #eeeeee 91.48936%, rgba(0, 0, 0, 0) 91.48936%, rgba(0, 0, 0, 0) 93.61702%, #eeeeee 93.61702%, #eeeeee 100.0%, rgba(0, 0, 0, 0) 100.0%);
-  background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0) 0, #eeeeee 0, #eeeeee 6.38298%, rgba(0, 0, 0, 0) 6.38298%, rgba(0, 0, 0, 0) 8.51064%, #eeeeee 8.51064%, #eeeeee 14.89362%, rgba(0, 0, 0, 0) 14.89362%, rgba(0, 0, 0, 0) 17.02128%, #eeeeee 17.02128%, #eeeeee 23.40426%, rgba(0, 0, 0, 0) 23.40426%, rgba(0, 0, 0, 0) 25.53191%, #eeeeee 25.53191%, #eeeeee 31.91489%, rgba(0, 0, 0, 0) 31.91489%, rgba(0, 0, 0, 0) 34.04255%, #eeeeee 34.04255%, #eeeeee 40.42553%, rgba(0, 0, 0, 0) 40.42553%, rgba(0, 0, 0, 0) 42.55319%, #eeeeee 42.55319%, #eeeeee 48.93617%, rgba(0, 0, 0, 0) 48.93617%, rgba(0, 0, 0, 0) 51.06383%, #eeeeee 51.06383%, #eeeeee 57.44681%, rgba(0, 0, 0, 0) 57.44681%, rgba(0, 0, 0, 0) 59.57447%, #eeeeee 59.57447%, #eeeeee 65.95745%, rgba(0, 0, 0, 0) 65.95745%, rgba(0, 0, 0, 0) 68.08511%, #eeeeee 68.08511%, #eeeeee 74.46809%, rgba(0, 0, 0, 0) 74.46809%, rgba(0, 0, 0, 0) 76.59574%, #eeeeee 76.59574%, #eeeeee 82.97872%, rgba(0, 0, 0, 0) 82.97872%, rgba(0, 0, 0, 0) 85.10638%, #eeeeee 85.10638%, #eeeeee 91.48936%, rgba(0, 0, 0, 0) 91.48936%, rgba(0, 0, 0, 0) 93.61702%, #eeeeee 93.61702%, #eeeeee 100.0%, rgba(0, 0, 0, 0) 100.0%);
-  background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0) 0, #eeeeee 0, #eeeeee 6.38298%, rgba(0, 0, 0, 0) 6.38298%, rgba(0, 0, 0, 0) 8.51064%, #eeeeee 8.51064%, #eeeeee 14.89362%, rgba(0, 0, 0, 0) 14.89362%, rgba(0, 0, 0, 0) 17.02128%, #eeeeee 17.02128%, #eeeeee 23.40426%, rgba(0, 0, 0, 0) 23.40426%, rgba(0, 0, 0, 0) 25.53191%, #eeeeee 25.53191%, #eeeeee 31.91489%, rgba(0, 0, 0, 0) 31.91489%, rgba(0, 0, 0, 0) 34.04255%, #eeeeee 34.04255%, #eeeeee 40.42553%, rgba(0, 0, 0, 0) 40.42553%, rgba(0, 0, 0, 0) 42.55319%, #eeeeee 42.55319%, #eeeeee 48.93617%, rgba(0, 0, 0, 0) 48.93617%, rgba(0, 0, 0, 0) 51.06383%, #eeeeee 51.06383%, #eeeeee 57.44681%, rgba(0, 0, 0, 0) 57.44681%, rgba(0, 0, 0, 0) 59.57447%, #eeeeee 59.57447%, #eeeeee 65.95745%, rgba(0, 0, 0, 0) 65.95745%, rgba(0, 0, 0, 0) 68.08511%, #eeeeee 68.08511%, #eeeeee 74.46809%, rgba(0, 0, 0, 0) 74.46809%, rgba(0, 0, 0, 0) 76.59574%, #eeeeee 76.59574%, #eeeeee 82.97872%, rgba(0, 0, 0, 0) 82.97872%, rgba(0, 0, 0, 0) 85.10638%, #eeeeee 85.10638%, #eeeeee 91.48936%, rgba(0, 0, 0, 0) 91.48936%, rgba(0, 0, 0, 0) 93.61702%, #eeeeee 93.61702%, #eeeeee 100.0%, rgba(0, 0, 0, 0) 100.0%);
-  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0) 0, #eeeeee 0, #eeeeee 6.38298%, rgba(0, 0, 0, 0) 6.38298%, rgba(0, 0, 0, 0) 8.51064%, #eeeeee 8.51064%, #eeeeee 14.89362%, rgba(0, 0, 0, 0) 14.89362%, rgba(0, 0, 0, 0) 17.02128%, #eeeeee 17.02128%, #eeeeee 23.40426%, rgba(0, 0, 0, 0) 23.40426%, rgba(0, 0, 0, 0) 25.53191%, #eeeeee 25.53191%, #eeeeee 31.91489%, rgba(0, 0, 0, 0) 31.91489%, rgba(0, 0, 0, 0) 34.04255%, #eeeeee 34.04255%, #eeeeee 40.42553%, rgba(0, 0, 0, 0) 40.42553%, rgba(0, 0, 0, 0) 42.55319%, #eeeeee 42.55319%, #eeeeee 48.93617%, rgba(0, 0, 0, 0) 48.93617%, rgba(0, 0, 0, 0) 51.06383%, #eeeeee 51.06383%, #eeeeee 57.44681%, rgba(0, 0, 0, 0) 57.44681%, rgba(0, 0, 0, 0) 59.57447%, #eeeeee 59.57447%, #eeeeee 65.95745%, rgba(0, 0, 0, 0) 65.95745%, rgba(0, 0, 0, 0) 68.08511%, #eeeeee 68.08511%, #eeeeee 74.46809%, rgba(0, 0, 0, 0) 74.46809%, rgba(0, 0, 0, 0) 76.59574%, #eeeeee 76.59574%, #eeeeee 82.97872%, rgba(0, 0, 0, 0) 82.97872%, rgba(0, 0, 0, 0) 85.10638%, #eeeeee 85.10638%, #eeeeee 91.48936%, rgba(0, 0, 0, 0) 91.48936%, rgba(0, 0, 0, 0) 93.61702%, #eeeeee 93.61702%, #eeeeee 100.0%, rgba(0, 0, 0, 0) 100.0%);
-  background-image: linear-gradient(left, rgba(0, 0, 0, 0) 0, #eeeeee 0, #eeeeee 6.38298%, rgba(0, 0, 0, 0) 6.38298%, rgba(0, 0, 0, 0) 8.51064%, #eeeeee 8.51064%, #eeeeee 14.89362%, rgba(0, 0, 0, 0) 14.89362%, rgba(0, 0, 0, 0) 17.02128%, #eeeeee 17.02128%, #eeeeee 23.40426%, rgba(0, 0, 0, 0) 23.40426%, rgba(0, 0, 0, 0) 25.53191%, #eeeeee 25.53191%, #eeeeee 31.91489%, rgba(0, 0, 0, 0) 31.91489%, rgba(0, 0, 0, 0) 34.04255%, #eeeeee 34.04255%, #eeeeee 40.42553%, rgba(0, 0, 0, 0) 40.42553%, rgba(0, 0, 0, 0) 42.55319%, #eeeeee 42.55319%, #eeeeee 48.93617%, rgba(0, 0, 0, 0) 48.93617%, rgba(0, 0, 0, 0) 51.06383%, #eeeeee 51.06383%, #eeeeee 57.44681%, rgba(0, 0, 0, 0) 57.44681%, rgba(0, 0, 0, 0) 59.57447%, #eeeeee 59.57447%, #eeeeee 65.95745%, rgba(0, 0, 0, 0) 65.95745%, rgba(0, 0, 0, 0) 68.08511%, #eeeeee 68.08511%, #eeeeee 74.46809%, rgba(0, 0, 0, 0) 74.46809%, rgba(0, 0, 0, 0) 76.59574%, #eeeeee 76.59574%, #eeeeee 82.97872%, rgba(0, 0, 0, 0) 82.97872%, rgba(0, 0, 0, 0) 85.10638%, #eeeeee 85.10638%, #eeeeee 91.48936%, rgba(0, 0, 0, 0) 91.48936%, rgba(0, 0, 0, 0) 93.61702%, #eeeeee 93.61702%, #eeeeee 100.0%, rgba(0, 0, 0, 0) 100.0%);
-  height: 100%;
-  left: 0;
-  margin: 0 auto;
-  max-width: 68em;
-  opacity: 0.4;
-  position: fixed;
-  right: 0;
-  width: 100%;
-  pointer-events: none;
-  z-index: -1;
-}
-
 @font-face {
   font-family: 'impactregular';
   src: url("impact-webfont.eot");
@@ -576,12 +554,75 @@ body:before {
   width: 576px;
 }
 
-/* line 23, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 60, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.grey-Navbar-background {
+  background-position: 0 -1074px;
+  height: 78px;
+  width: 1100px;
+}
+
+/* line 60, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.grey-Red-star {
+  background-position: 0 -1260px;
+  height: 42px;
+  width: 44px;
+}
+
+/* line 60, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.grey-Robo-badge {
+  background-position: 0 -737px;
+  height: 317px;
+  width: 185px;
+}
+
+/* line 60, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.grey-Tools-badge {
+  background-position: 0 -400px;
+  height: 317px;
+  width: 185px;
+}
+
+/* line 60, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.grey-Welcome {
+  background-position: 0 -1172px;
+  height: 68px;
+  width: 207px;
+}
+
+/* line 60, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.grey-large-red-bar {
+  background-position: 0 -1350px;
+  height: 8px;
+  width: 939px;
+}
+
+/* line 60, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.grey-medium-red-bar {
+  background-position: 0 -1322px;
+  height: 8px;
+  width: 598px;
+}
+
+/* line 60, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.grey-small-red-bar {
+  background-position: 0 -1378px;
+  height: 8px;
+  width: 301px;
+}
+
+/* line 60, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.grey-top-text {
+  background-position: 0 0;
+  height: 380px;
+  width: 576px;
+}
+
+/* line 24, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .background {
   background-image: url("grey/grey-background.jpg");
 }
 
-/* line 30, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 31, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-first-line {
   overflow: hidden;
   *zoom: 1;
@@ -591,7 +632,7 @@ body:before {
   margin-top: 10px;
 }
 
-/* line 35, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 36, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-Navbar-background {
   display: block;
   float: left;
@@ -604,7 +645,7 @@ body:before {
   margin-right: 0;
 }
 
-/* line 42, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 43, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-second-line {
   overflow: hidden;
   *zoom: 1;
@@ -613,7 +654,7 @@ body:before {
   margin-right: auto;
 }
 
-/* line 45, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 46, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-Red-star {
   overflow: hidden;
   *zoom: 1;
@@ -632,7 +673,7 @@ body:before {
   margin-right: 0;
 }
 
-/* line 54, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 55, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-third-line {
   overflow: hidden;
   *zoom: 1;
@@ -641,7 +682,7 @@ body:before {
   margin-right: auto;
 }
 
-/* line 57, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 58, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-small-red-bar {
   display: block;
   float: left;
@@ -655,7 +696,7 @@ body:before {
   margin-right: 0;
 }
 
-/* line 62, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 63, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-Welcome {
   display: block;
   float: left;
@@ -669,13 +710,13 @@ body:before {
   margin-right: 0;
 }
 
-/* line 67, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 68, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .right {
   margin-top: -29px;
   margin-left: 857px;
 }
 
-/* line 73, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 74, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-fourth-line {
   overflow: hidden;
   *zoom: 1;
@@ -684,12 +725,12 @@ body:before {
   margin-right: auto;
 }
 
-/* line 76, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 77, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-Robo-badge, .grey-Tools-badge {
   display: block;
   float: left;
   margin-right: 2.12766%;
-  width: 23.40426%;
+  width: 13.61702%;
   margin-top: 64px;
 }
 /* line 41, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/neat-1.3.0/app/assets/stylesheets/grid/_span-columns.scss */
@@ -697,17 +738,37 @@ body:before {
   margin-right: 0;
 }
 
-/* line 80, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 81, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-Robo-badge {
+  margin-right: 0;
   margin-left: 200px;
 }
 
-/* line 83, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
-.grey-Tools-badge {
-  margin-left: 428px;
+/* line 85, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+.grey-top-text {
+  display: block;
+  float: left;
+  margin-right: 2.12766%;
+  width: 42.55319%;
+  margin-right: 0;
+  margin-top: 65px;
+}
+/* line 41, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/neat-1.3.0/app/assets/stylesheets/grid/_span-columns.scss */
+.grey-top-text:last-child {
+  margin-right: 0;
 }
 
-/* line 89, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 90, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+.grey-Tools-badge {
+  margin-right: 0;
+}
+
+/* line 93, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+.grey-Robo-badge, .grey-top-text {
+  margin-right: 5px;
+}
+
+/* line 99, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-fifth-line {
   overflow: hidden;
   *zoom: 1;
@@ -716,14 +777,14 @@ body:before {
   margin-right: auto;
 }
 
-/* line 92, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
+/* line 102, ../../app/assets/stylesheets/_grey_retro_smashbot.css.sass */
 .grey-medium-red-bar {
   display: block;
   float: left;
   margin-right: 2.12766%;
   width: 48.93617%;
-  margin-top: 150px;
-  margin-left: 385px;
+  margin-top: 86px;
+  margin-left: 386px;
 }
 /* line 41, ../../../../.rvm/gems/ruby-1.9.3-p327@global/gems/neat-1.3.0/app/assets/stylesheets/grid/_span-columns.scss */
 .grey-medium-red-bar:last-child {
