--- a/app/views/pages/grey_retro_smashbot.html.erb
+++ b/app/views/pages/grey_retro_smashbot.html.erb
@@ -23,16 +23,61 @@
     </div>
 
     <div class="grey-fourth-line">
-      <div class="grey-Robo-badge">
-      </div>
-      <div class="grey-top-text">
-      </div>
-      <div class="grey-Tools-badge">
-      </div>
+        <div class="grey-Robo-badge">
+        </div>
+        <div class="grey-top-text">
+        </div>
+        <div class="grey-Tools-badge">
+        </div>
     </div>
 
     <div class="grey-fifth-line">
       <div class="grey-medium-red-bar">
+      </div>
+    </div>
+
+    <div class="grey-sixth-line">
+      <div class="grey-first-header">
+      </div>
+    </div>
+
+    <div class="grey-seventh-line">
+      <div class="grey-slider">
+      </div>
+    </div>
+
+    <div class="grey-eight-line">
+      <div class="grey-button">
+      </div>
+    </div>
+
+    <div class="grey-ninth-line">
+      <div class="grey-medium-red-bar">
+      </div>
+    </div>
+
+    <div class="grey-tenth-line">
+      <div class="grey-second-header">
+      </div>
+    </div>
+
+    <div class="grey-eleventh-line">
+      <div class="grey-bottom-text">
+      </div>
+    </div>
+
+    <div class="grey-twelfth-line">
+      <div class="grey-large-red-bar">
+      </div>
+    </div>
+
+    <div class="grey-13th-line">
+      <div class="grey-footer-text">
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="grey-copyright-text">
       </div>
     </div>
   <!--
