finish grey-retro-smashbot sprite version

--- a/app/assets/stylesheets/_grey_retro_smashbot.css.sass
+++ b/app/assets/stylesheets/_grey_retro_smashbot.css.sass
@@ -34,10 +34,21 @@ $grey-spacing:20px
   +outer-container
   margin-top: 10px
 
-
 .grey-Navbar-background
   +span-columns(12)
   margin-left: 130px
+
+nav ul
+  margin-left: 56px
+
+nav ul li 
+  float: left
+  margin-top: 12px
+  margin-left: 30px
+
+nav ul li:first-child
+  margin-top: 15px
+  margin-right: 5px
 
 
 //******************** SECOND LINE ***********
@@ -112,20 +123,32 @@ $grey-spacing:20px
 
 .grey-sixth-line
   +outer-container
+
+.grey-first-header
   margin-top: 82px
   margin-left: 338px
+
+
 
 //********************** SEVENTH LINE *******
 
 .grey-seventh-line
   +outer-container
+  
+.grey-slider
   margin-top: 65px
   margin-left: 287px
+
 
 //*********************** EIGHT LINE ********
 
 .grey-eight-line
   +outer-container
+
+.grey-button
+  margin-left: 520px
+  margin-top: 65px
+
 
 
 //*********************** NINTH LINE ********
@@ -133,16 +156,14 @@ $grey-spacing:20px
 .grey-ninth-line
   +outer-container
 
-.grey-button
-  margin-left: 520px
-  margin-top: 65px
-
 //*********************** TENTH LINE ********
 
 
 
 .grey-tenth-line
   +outer-container
+
+.grey-second-header
   margin-top: 65px
   margin-left: 232px
 
@@ -151,20 +172,29 @@ $grey-spacing:20px
 
 .grey-eleventh-line
   +outer-container
+
+.grey-bottom-text
   margin-top: 65px
   margin-left: 419px
+
+
 
 //*********************** TWELFTH LINE ******
 
 .grey-twelfth-line
   +outer-container
+
+.grey-large-red-bar
   margin-top: 65px
   margin-left: 231px
+
 
 //*********************** 13TH LINE ******
 
 .grey-13th-line
   +outer-container
+
+.grey-footer-text
   margin-top: 32px
   margin-left: 225px
 
