--- a/app/views/pages/grey_retro_smashbot.html.erb
+++ b/app/views/pages/grey_retro_smashbot.html.erb
@@ -4,6 +4,14 @@
     <div class="grey-first-line">
       <nav>
         <div class="grey-Navbar-background">
+          <ul>
+            <li><div class="grey-logo"></li>
+            <li><div class="grey-home"></li>
+            <li><div class="grey-about"></li>
+            <li><div class="grey-portfolio"></li>
+            <li><div class="grey-workshops"></li>
+            <li><div class="grey-contact"></li>
+          </ul>
         </div>
       </nav>
     </div>
