replace top paragraph and  badges with one image

--- a/app/assets/stylesheets/_grey_retro_smashbot.css.sass
+++ b/app/assets/stylesheets/_grey_retro_smashbot.css.sass
@@ -86,29 +86,9 @@ nav ul li:first-child
 .grey-fourth-line
   +outer-container
 
-.grey-Robo-badge, .grey-Tools-badge
-  +span-columns(1.9)
-  margin-top: 64px
-
-.grey-Robo-badge
-  +outer-container
-  +omega
-  margin-left: 200px
-  margin-right: 4px
-
-.grey-top-text
-  +outer-container
-  +span-columns(5.25)
-  +omega
+.grey-text-badges
+  margin-left: 195px
   margin-top: 65px
-
-.grey-Tools-badge
-  +outer-container
-  +omega
-  margin-left: 2px
-
-.grey-top-text
-
 
 //********************* FIFTH LINE **********
 
@@ -204,7 +184,6 @@ nav ul li:first-child
   margin-top: 32px
   height: 20px
   width: auto
-
 .grey-copyright-text
   padding-top: 10px
   margin-left: 220px
