--- a/app/views/pages/grey_retro_smashbot.html.erb
+++ b/app/views/pages/grey_retro_smashbot.html.erb
@@ -31,11 +31,7 @@
     </div>
 
     <div class="grey-fourth-line">
-        <div class="grey-Robo-badge">
-        </div>
-        <div class="grey-top-text">
-        </div>
-        <div class="grey-Tools-badge">
+        <div class="grey-text-badges">
         </div>
     </div>
 
